--- a/Biltern-Client/src/UI/Alert.css
+++ b/Biltern-Client/src/UI/Alert.css
@@ -21,26 +21,30 @@
     padding: 6px 16px;
     margin: 6px 0;
     border-radius: 4px;
-    color: #fff;
-    font-size: 14px;
+    color: #332d2d;
+    font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.00938em;
     pointer-events: auto;
+    background-color: #f5f5f5;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
+                0 2px 1px -1px rgba(0, 0, 0, 0.12), 
+                0 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 
-.alert alert-success {
+.alert-success {
     background-color: #4caf50;
 }
 
-.alert alert-error {
+.alert-error {
     background-color: #f44336;
 }
 
-.alert alert-info {
+.alert-info {
     background-color: #2196f3;
 }
 
-.alert alert-warning {
+.alert-warning {
     background-color: #ff9800;
 }
