modified file upload, added current status page for student report upload

--- a/Biltern-Client/src/UI/ActionButton.css
+++ b/Biltern-Client/src/UI/ActionButton.css
@@ -1,5 +1,5 @@
 .actionButton {
-    background-color: #fff;
+    background-color: #aea9a9;
     border: 1px solid #e5e5e5;
     border-radius: 4px;
     color: #333;
