--- a/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
+++ b/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
@@ -24,16 +24,18 @@
     background-color: #D9D9D9;
 }
 
-.submit {
-    margin-top: 10px;
-    border-radius: 5px;
-    background-color: #508AE1;
-    color: white;
-    font-weight: bold;
-    font-size: 1.2rem;
-    border: none;
+.actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    cursor: pointer;
+    height: 100%;
+    border-radius: 2%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #ffffff;
 }
 
 .infoPane {
