--- a/Biltern-Client/src/UI/ActionButton.css
+++ b/Biltern-Client/src/UI/ActionButton.css
@@ -8,7 +8,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 1.42857;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     padding: 6px 12px;
     text-align: center;
     touch-action: manipulation;
