--- a/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
+++ b/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
@@ -24,6 +24,17 @@
     background-color: #D9D9D9;
 }
 
+.buttons {
+    display: flex;
+    flex-direction: column;
+    /* align-items: left; */
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #ffffff;
+}
+
 .actions {
     display: flex;
     flex-direction: row;
