--- a/Biltern-Client/src/UI/FileUpload.css
+++ b/Biltern-Client/src/UI/FileUpload.css
@@ -2,6 +2,7 @@
     height: 16rem;
     width: 28rem;
     max-width: 100%;
+    max-height: 100%;
     text-align: center;
     position: relative;
 }
