--- a/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
+++ b/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
@@ -85,7 +85,7 @@
     border-radius: 2%;
     border: 1px solid #ccc;
     padding: 10px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     background-color: #ffffff;
 }
 
