--- a/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
+++ b/Biltern-Client/src/components/CurrentStatus/CurrentStatus.module.css
@@ -95,6 +95,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    /* height: 100%; */
     border-radius: 2%;
     border: 1px solid #ccc;
     padding: 10px;
@@ -116,10 +117,9 @@
 .infoPaneRight {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: center;
-    width: 150px;
-    height: 200px;
     padding: 10px;
     margin-top: 10px;
+    margin-left: 100px; 
 }
