--- a/Biltern-Client/src/components/GradingFormPage/GradingFormPage.module.css
+++ b/Biltern-Client/src/components/GradingFormPage/GradingFormPage.module.css
@@ -2,11 +2,27 @@
     box-sizing: border-box;
     margin-left: 20px;
     width: 1400px;
-    height: 700px;
+    height: 1800px;
 }
+
+.grading_form_page_container input{
+    width: 50px;
+    height: 20px;
+}
+
+.grading_form_page_container td, th {
+    border: 1px solid black;
+    text-align: center;
+}
+
+.grading_form_page_container table{
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+
 .student_report{
     height: 100%;
-    max-height: 700px;
+    max-height: 900px;
     overflow: auto;
 }
 
@@ -22,4 +38,15 @@
     background-color: white;
     margin: 10px;
     padding: 2%;
+}
+
+.explaining_information{
+    margin-top: 0;
+    margin-bottom: 0 ;
+    margin-left: 10px;
+    font-size: small;
+    font-style: italic;
+}
+.submit_button{
+    width: auto;
 }
