--- a/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/RemindersPanel.module.css
+++ b/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/RemindersPanel.module.css
@@ -1,10 +1,11 @@
 .reminders_panel_container{
-    width: 400px;
-    height: 300px;
+    width: 525px;
+    height: 375px;
     border: 1px solid black;
     border-radius: 15px;
     margin: 2%;
     background-color: white;
+    font-size: larger;
 }
 
 .reminders_panel_container h1{
