--- a/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/SecretaryListPanel.module.css
+++ b/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/SecretaryListPanel.module.css
@@ -1,12 +1,13 @@
 .secretary_list_panel_container{
-    width: 400px;
-    height: 300px;
+    width: 525px;
+    height: 400px;
     border: 1px solid black;
     border-radius: 15px;
     box-sizing: border-box;
     padding: 3%;
     margin: 20px;
     background-color: white;
+    font-size: larger;
 }
 
 .secretary_list_panel_container h1{
