--- a/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/StudentStatisticsPanel.module.css
+++ b/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/StudentStatisticsPanel.module.css
@@ -1,6 +1,6 @@
 .student_statistics_panel_container{
-    width: 400px;
-    height: 300px;
+    width: 500px;
+    height: 400px;
     border: 1px solid black;
     box-sizing: border-box;
     padding: 2%;
@@ -18,5 +18,7 @@
 }
 .student_statistics_chart{
     padding: 0%;
-    margin: 0;
+    margin-left: 50px;
+    height: 325px;
+    width: 400px;
 }
