--- a/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/TAInfoPanel.module.css
+++ b/Biltern-Client/src/components/Dashboard/Dashboard Panels/styles/TAInfoPanel.module.css
@@ -1,7 +1,7 @@
 .ta_info_panel_container{
     box-sizing: border-box;
-    width: 350px;
-    height: 250px;
+    width: 425px;
+    height: 300px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     align-items: center;
@@ -10,6 +10,7 @@
     border-radius: 15px;
     margin: 2%;
     background-color: white;
+    font-size: larger;
 }
 
 .ta_info_panel_container h1{
