--- a/Biltern-Client/src/components/Dashboard/Dashboard.module.css
+++ b/Biltern-Client/src/components/Dashboard/Dashboard.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 0px;
+    margin-left: 300px;
     justify-content: space-around;
+    box-sizing: border-box;
 }
