--- a/Biltern-Client/src/components/GradingFormPage/GradingFormPage.module.css
+++ b/Biltern-Client/src/components/GradingFormPage/GradingFormPage.module.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin-left: 20px;
     width: 1400px;
-    height: 1800px;
+    height: 900px;
 }
 
 .grading_form_page_container input{
@@ -32,7 +32,17 @@
     margin-bottom: 2%;
 }
 
-.part_a{
+.upload_signature{
+    width: 200px;
+    height: 200px;
+
+}
+
+.grading{
+    height: 900px;
+    overflow: auto;
+}
+.grading_parts{
     border: 1px solid black;
     width: auto;
     background-color: white;
@@ -47,6 +57,15 @@
     font-size: small;
     font-style: italic;
 }
-.submit_button{
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
     width: auto;
+    background-color: white;
+    margin: 10px;
+    padding: 2%;
+    justify-content: space-around;
+    align-items: center;
 }
